--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,102 +1,45 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- <div class="squareone"></div>
-<div class="squaretwo"></div>
-<div class="squarethree"></div>
-<div class="squarefour"></div>
-<div class="squarefive"></div> -->
 
-{% for post in blogpost_list %}
+<div class="container-fluid">
+    <div class="row">
 
-{% if forloop.counter == 2 %}
-<div class="all-posts-post-box left-posts">
-    <h2>{{ post.title }}</h2>
-    {% if "placeholder" in post.featured_image.url %}
-    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-        alt="default image">
-    {% else %}
-    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-    {% endif %}
-    <p>{{ post.excerpt }}</p>
-    <div all the rest>
-        <h3>Author: {{ post.author }}</h3>
-        <p>{{ post.created_on}}</p>
-        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
+        <!-- Blog Entries Column -->
+        <div class="col-12 mt-3 left">
+            <div class="row">
+                {% for post in blogpost_list %}
+                <div class="left-posts">
+                    <div class="all-posts-post-box">
+                        <a href="{% url 'blog_post' post.slug  %}" class="post-link">
+                            <h2 class="card-title">{{ post.title }}</h2>
+                        </a>
+                        {% if "placeholder" in post.featured_image.url %}
+                        <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                            alt="default image">
+                        {% else %}
+                        <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+                        {% endif %}
+                        <p>{{ post.excerpt }}</p>
+                        <div>
+                            <h3>Author: {{ post.author }}</h3>
+                            <p>{{ post.created_on}}</p>
+                            <div><i class="far fa-heart"></i>  {{ post.number_of_likes }}</div>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:3 %}
+            </div>
+
+            <div class="row">
+                {% endif %}
+                {% endfor %}
+            </div>
+
+        </div>
     </div>
 </div>
-
-{% elif forloop.counter == 4 %}
-<div class="all-posts-post-box right-posts">
-    <h2>{{ post.title }}</h2>
-    {% if "placeholder" in post.featured_image.url %}
-    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-        alt="default image">
-    {% else %}
-    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-    {% endif %}
-    <p>{{ post.excerpt }}</p>
-    <div all the rest>
-        <h3>Author: {{ post.author }}</h3>
-        <p>{{ post.created_on}}</p>
-        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
-    </div>
-</div>
-
-{% elif forloop.counter == 1 %}
-<div class="all-posts-post-box main-posts">
-    <h2>{{ post.title }}</h2>
-    {% if "placeholder" in post.featured_image.url %}
-    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-        alt="default image">
-    {% else %}
-    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-    {% endif %}
-    <p>{{ post.excerpt }}</p>
-    <div all the rest>
-        <h3>Author: {{ post.author }}</h3>
-        <p>{{ post.created_on}}</p>
-        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
-    </div>
-</div>
-
-{% elif forloop.counter == 5 %}
-<div class="all-posts-post-box second-left-posts">
-    <h2>{{ post.title }}</h2>
-    {% if "placeholder" in post.featured_image.url %}
-    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-        alt="default image">
-    {% else %}
-    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-    {% endif %}
-    <p>{{ post.excerpt }}</p>
-    <div all the rest>
-        <h3>Author: {{ post.author }}</h3>
-        <p>{{ post.created_on}}</p>
-        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
-    </div>
-</div>
-
-{% else %}
-<div class="all-posts-post-box second-right-posts">
-    <h2>{{ post.title }}</h2>
-    {% if "placeholder" in post.featured_image.url %}
-    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-        alt="default image">
-    {% else %}
-    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-    {% endif %}
-    <p>{{ post.excerpt }}</p>
-    <div all the rest>
-        <h3>Author: {{ post.author }}</h3>
-        <p>{{ post.created_on}}</p>
-        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
-    </div>
-</div>
-
-{% endif %}
-{% endfor %}
-
+<br>
 <div>
     {% if is_paginated %}
     <nav aria-label="Page navigation">
@@ -112,5 +55,4 @@
     </nav>
     {% endif %}
 </div>
-
-{% endblock %}
+{%endblock%}
