--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,7 +127,7 @@ h3 {
 
 .single-blog-post h1{
     margin: 40px auto;
-    color: #2B1633;
+    color: #EFB542;
     font-size: 3em;
     text-transform: uppercase;
 }
