Add View, URL, and HTML template for About page

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                         <a href="{% url 'home' %}" class="nav-bar">Home</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="nav-bar">About</a>
+                        <a href="{% url 'about' %}" class="nav-bar">About</a>
                     </li>
                     <li class="list-inline-item">
                         <a href="#" class="nav-bar">Prints</a>
