--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,23 @@
 
 {% block content %}
 
-<h1>WHAT???</h1>
+<div class="col about-page">
+    <div class="row">
+        <div class="col-md-8 about-image">
+        </div>
+        <div class="col-md-4">
+            <h2>About :</h2>
+            <p>Welcome to print(<span id="statement-green">STATEMENTS</span>) where our sole purpose in this world is to create art enthusiasts to the
+                artists they love, the artists they don’t-yet-know, and the unique, limited edition prints available
+                only here!</p>
+            <p>Print statements works directly with our artists, giving them a platform to show-off their creativity &
+                hard work, and making those works available as limited edition prints.</p>
+            <p>If you want to see what’s new & happening, head over to our <a href="{% url 'blog' %}">blog</a> for all
+                the latest updates.</p>
+            <p>And if you’re ready to have your socks knocked off, check out the prints that are currently available <a
+                    href="#">here</a>.</p>
+        </div>
+    </div>
+</div>
 
 {%endblock%}
