--- a/templates/base.html
+++ b/templates/base.html
@@ -24,14 +24,14 @@
 <body>
 
     <header>
-        <!-- Company logo & tagline -->
+        <!-- SITE LOGO & TAGLINE -->
         <div class="logo-tagline">
             <a href="{% url 'home' %}" class="logo-link">
                 <h1>print(<span id="statement-green">STATEMENTS</span>)</h1>
             </a>
             <h3>What does yours say?</h3>
         </div>
-        <!-- Collapsable nav bar  & site logo for mobile view -->
+        <!-- NAVBAR COLLAPSE: MOBILE VIEW -->
         <div class="dropdown-center display-mobile menu-btn-container">
             <button class="btn btn-secondary dropdown-toggle menu-btn" type="button" id="dropdownCenterBtn" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa-solid fa-bars"></i> menu
@@ -63,7 +63,7 @@
           </div>
         <hr>
 
-        <!-- Navigation bar -->
+        <!-- NAVIGATION BAR -->
         <div class="row vanish-mobile">
             <div class="col">
                 <ul id="nav" class="list-inline">
@@ -110,7 +110,7 @@
     <hr>
 
     <footer>
-        <!--Social links-->
+        <!--SOCIAL LINKS-->
         <div class="row">
             <div class="col social-icons">
                 <ul id="social" class="list-inline">
@@ -154,6 +154,7 @@
             </div>
         </div>
 
+        <!-- LOCATION & DISCLAIMER -->
         <div class="footer-text">
             <p>Athens, Greece<br>Project created for educational purposes only.</p>
         </div>
